--- a/MDK-ARM/STM32_Sensorless_BLDC/STM32_Sensorless_BLDC.build_log.htm
+++ b/MDK-ARM/STM32_Sensorless_BLDC/STM32_Sensorless_BLDC.build_log.htm
@@ -27,16 +27,15 @@ Project File Date:  09/21/2025
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 4 (build 422)', folder: 'D:\Keil MDK\ARM\ARMCC\Bin'
 Build target 'STM32_Sensorless_BLDC'
-compiling lv_port_disp.c...
-..\LVGL\examples\porting\lv_port_disp.c(20): warning:  #1215-D: #warning directive: Please define or replace the macro MY_DISP_HOR_RES with the actual screen width, default value 320 is used for now.
-      #warning Please define or replace the macro MY_DISP_HOR_RES with the actual screen width, default value 320 is used for now.
-..\LVGL\examples\porting\lv_port_disp.c(25): warning:  #1215-D: #warning directive: Please define or replace the macro MY_DISP_HOR_RES with the actual screen height, default value 240 is used for now.
-      #warning Please define or replace the macro MY_DISP_HOR_RES with the actual screen height, default value 240 is used for now.
-..\LVGL\examples\porting\lv_port_disp.c: 2 warnings, 0 errors
+compiling lcd_init.c...
+..\Bsp\lcd_init.c(141): warning:  #223-D: function "vTaskDelay" declared implicitly
+  	vTaskDelay(100);
+..\Bsp\lcd_init.c: 1 warning, 0 errors
+compiling lcd_task.c...
 linking...
-Program Size: Code=157008 RO-data=18696 RW-data=680 ZI-data=99660  
+Program Size: Code=158084 RO-data=18704 RW-data=676 ZI-data=99812  
 FromELF: creating hex file...
-"STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf" - 0 Error(s), 2 Warning(s).
+"STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -59,7 +58,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@6.1.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:07
+Build Time Elapsed:  00:00:08
 </pre>
 </body>
 </html>
