--- a/MDK-ARM/STM32_Sensorless_BLDC/STM32_Sensorless_BLDC.build_log.htm
+++ b/MDK-ARM/STM32_Sensorless_BLDC/STM32_Sensorless_BLDC.build_log.htm
@@ -21,13 +21,90 @@ Target DLL:      CMSIS_AGDI.dll V1.33.18.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-D:\2025\STM32_project\STM32_Sensorless_BLDC\MDK-ARM\STM32_Sensorless_BLDC.uvprojx
-Project File Date:  09/21/2025
+d:\2025\STM32_project\STM32_Sensorless_BLDC\MDK-ARM\STM32_Sensorless_BLDC.uvprojx
+Project File Date:  09/22/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 4 (build 422)', folder: 'D:\Keil MDK\ARM\ARMCC\Bin'
 Build target 'STM32_Sensorless_BLDC'
-"STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf" - 0 Error(s), 0 Warning(s).
+compiling lv_port_disp.c...
+..\LVGL\examples\porting\lv_port_disp.c(21): warning:  #1215-D: #warning directive: Please define or replace the macro MY_DISP_HOR_RES with the actual screen width, default value 320 is used for now.
+      #warning Please define or replace the macro MY_DISP_HOR_RES with the actual screen width, default value 320 is used for now.
+..\LVGL\examples\porting\lv_port_disp.c(26): warning:  #1215-D: #warning directive: Please define or replace the macro MY_DISP_HOR_RES with the actual screen height, default value 240 is used for now.
+      #warning Please define or replace the macro MY_DISP_HOR_RES with the actual screen height, default value 240 is used for now.
+..\LVGL\examples\porting\lv_port_disp.c(170): warning:  #223-D: function "LCD_DMA_LVGL_Fill" declared implicitly
+  		HAL_StatusTypeDef status = LCD_DMA_LVGL_Fill(area->x1, area->y1, area->x2, area->y2, color_p);
+..\LVGL\examples\porting\lv_port_disp.c(170): warning:  #188-D: enumerated type mixed with another type
+  		HAL_StatusTypeDef status = LCD_DMA_LVGL_Fill(area->x1, area->y1, area->x2, area->y2, color_p);
+..\LVGL\examples\porting\lv_port_disp.c: 4 warnings, 0 errors
+compiling lcd_init_dma.c...
+..\Bsp\lcd_init_dma.c(136): warning:  #223-D: function "vTaskDelay" declared implicitly
+      vTaskDelay(100);
+..\Bsp\lcd_init_dma.c: 1 warning, 0 errors
+compiling lcd_dma.c...
+compiling lcd_task.c...
+..\App\lcd_task.c(23): warning:  #223-D: function "LCD_DMA_Init" declared implicitly
+      LCD_DMA_Init();
+..\App\lcd_task.c: 1 warning, 0 errors
+compiling main.c...
+../Bsp/inc/AS5600.h(35): warning:  #1295-D: Deprecated declaration AS5600_GetVelocity - give arg types
+  float AS5600_GetVelocity();
+../Bsp/inc/MPU9250-DMP.h(52): warning:  #1295-D: Deprecated declaration MPU9250_DMP - give arg types
+  int MPU9250_DMP();
+../Bsp/inc/MPU9250-DMP.h(148): warning:  #1295-D: Deprecated declaration MPU9250_dataReady - give arg types
+  
+ool MPU9250_dataReady();
+../Algorithm/util/stm32_mpu9250_clk.h(9): warning:  #1-D: last line of file ends without a newline
+  #endif // _STM32_MPU9250_CLK_H_
+../Algorithm/util/stm32_mpu9250_i2c.h(11): warning:  #1-D: last line of file ends without a newline
+  #endif // _STM32_MPU9250_I2C_H_
+../Core/Src/main.c: 5 warnings, 0 errors
+linking...
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol ascii_1206 multiply defined (by lv_port_disp.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol ascii_1206 multiply defined (by lcd.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol ascii_1206 multiply defined (by lcd_dma.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol ascii_1206 multiply defined (by lcd_init_dma.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol ascii_1206 multiply defined (by lcd_task.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol ascii_1608 multiply defined (by lv_port_disp.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol ascii_1608 multiply defined (by lcd.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol ascii_1608 multiply defined (by lcd_dma.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol ascii_1608 multiply defined (by lcd_init_dma.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol ascii_1608 multiply defined (by lcd_task.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol ascii_2412 multiply defined (by lv_port_disp.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol ascii_2412 multiply defined (by lcd.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol ascii_2412 multiply defined (by lcd_dma.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol ascii_2412 multiply defined (by lcd_init_dma.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol ascii_2412 multiply defined (by lcd_task.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol ascii_3216 multiply defined (by lv_port_disp.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol ascii_3216 multiply defined (by lcd.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol ascii_3216 multiply defined (by lcd_dma.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol ascii_3216 multiply defined (by lcd_init_dma.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol ascii_3216 multiply defined (by lcd_task.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol tfont12 multiply defined (by lv_port_disp.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol tfont12 multiply defined (by lcd.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol tfont12 multiply defined (by lcd_dma.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol tfont12 multiply defined (by lcd_init_dma.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol tfont12 multiply defined (by lcd_task.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol tfont16 multiply defined (by lv_port_disp.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol tfont16 multiply defined (by lcd.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol tfont16 multiply defined (by lcd_dma.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol tfont16 multiply defined (by lcd_init_dma.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol tfont16 multiply defined (by lcd_task.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol tfont24 multiply defined (by lv_port_disp.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol tfont24 multiply defined (by lcd.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol tfont24 multiply defined (by lcd_dma.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol tfont24 multiply defined (by lcd_init_dma.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol tfont24 multiply defined (by lcd_task.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol tfont32 multiply defined (by lv_port_disp.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol tfont32 multiply defined (by lcd.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol tfont32 multiply defined (by lcd_dma.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol tfont32 multiply defined (by lcd_init_dma.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol tfont32 multiply defined (by lcd_task.o and main.o).
+STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf: Error: L6200E: Symbol LCD_LVGL_Color_Fill_DMA multiply defined (by lcd_dma.o and lcd.o).
+Not enough information to list image symbols.
+Not enough information to list load addresses in the image map.
+Finished: 2 information, 0 warning and 41 error messages.
+"STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf" - 41 Error(s), 11 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +127,8 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@6.1.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:04
+Target not created.
+Build Time Elapsed:  00:00:08
 </pre>
 </body>
 </html>
