--- a/MDK-ARM/STM32_Sensorless_BLDC/STM32_Sensorless_BLDC.build_log.htm
+++ b/MDK-ARM/STM32_Sensorless_BLDC/STM32_Sensorless_BLDC.build_log.htm
@@ -21,13 +21,20 @@ Target DLL:      CMSIS_AGDI.dll V1.33.18.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-D:\2025\STM32_project\STM32_Sensorless_BLDC\MDK-ARM\STM32_Sensorless_BLDC.uvprojx
-Project File Date:  09/21/2025
+d:\2025\STM32_project\STM32_Sensorless_BLDC\MDK-ARM\STM32_Sensorless_BLDC.uvprojx
+Project File Date:  09/22/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 4 (build 422)', folder: 'D:\Keil MDK\ARM\ARMCC\Bin'
 Build target 'STM32_Sensorless_BLDC'
-"STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf" - 0 Error(s), 0 Warning(s).
+compiling lcd_task.c...
+../Bsp/inc/lcd_dma.h(8): warning:  #1-D: last line of file ends without a newline
+  #endif /* __LCD_DMA_H */
+..\App\lcd_task.c: 1 warning, 0 errors
+linking...
+Program Size: Code=158016 RO-data=18704 RW-data=676 ZI-data=99716  
+FromELF: creating hex file...
+"STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +57,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@6.1.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:08
 </pre>
 </body>
 </html>
