--- a/MDK-ARM/STM32_Sensorless_BLDC/STM32_Sensorless_BLDC.build_log.htm
+++ b/MDK-ARM/STM32_Sensorless_BLDC/STM32_Sensorless_BLDC.build_log.htm
@@ -21,30 +21,32 @@ Target DLL:      CMSIS_AGDI.dll V1.33.18.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-D:\2025\STM32_project\STM32_Sensorless_BLDC\MDK-ARM\STM32_Sensorless_BLDC.uvprojx
+d:\2025\STM32_project\STM32_Sensorless_BLDC\MDK-ARM\STM32_Sensorless_BLDC.uvprojx
 Project File Date:  09/24/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 4 (build 422)', folder: 'D:\Keil MDK\ARM\ARMCC\Bin'
 Build target 'STM32_Sensorless_BLDC'
-compiling freertos.c...
-../Core/Src/freertos.c(118): warning:  #167-D: argument of type "void (*)(const void *)" is incompatible with parameter of type "osThreadFunc_t"
-    LcdTaskHandle = osThreadNew(LcdTask_Entry,
-ULL,&Lcd_task_attributes);
-../Core/Src/freertos.c(119): warning:  #167-D: argument of type "void (*)(const void *)" is incompatible with parameter of type "osThreadFunc_t"
-    LvglTimerTaskHandle = osThreadNew(LvglTimerTask_Entry, 
-ULL, &LvglTimer_task_attributes);
-../Core/Src/freertos.c(120): warning:  #167-D: argument of type "void (*)(const void *)" is incompatible with parameter of type "osThreadFunc_t"
-    IMU9250TaskHandle = osThreadNew(IMU9250Task_Entry, 
-ULL, &IMU9250_task_attributes);
-../Core/Src/freertos.c(167): warning:  #223-D: function "lv_timer_handler" declared implicitly
-      lv_timer_handler();
-../Core/Src/freertos.c: 4 warnings, 0 errors
-compiling lcd_task.c...
+compiling IMU_task.c...
+../Bsp/inc/MPU9250-DMP.h(52): warning:  #1295-D: Deprecated declaration MPU9250_DMP - give arg types
+  int MPU9250_DMP();
+../Bsp/inc/MPU9250-DMP.h(148): warning:  #1295-D: Deprecated declaration MPU9250_dataReady - give arg types
+  
+ool MPU9250_dataReady();
+..\App\IMU_task.c: 2 warnings, 0 errors
+compiling Init_file.c...
+../Bsp/inc/MPU9250-DMP.h(52): warning:  #1295-D: Deprecated declaration MPU9250_DMP - give arg types
+  int MPU9250_DMP();
+../Bsp/inc/MPU9250-DMP.h(148): warning:  #1295-D: Deprecated declaration MPU9250_dataReady - give arg types
+  
+ool MPU9250_dataReady();
+..\App\Init_file.c(41): warning:  #1-D: last line of file ends without a newline
+  }
+..\App\Init_file.c: 3 warnings, 0 errors
 linking...
 Program Size: Code=176492 RO-data=22448 RW-data=840 ZI-data=107852  
 FromELF: creating hex file...
-"STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf" - 0 Error(s), 4 Warning(s).
+"STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf" - 0 Error(s), 5 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -67,7 +69,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@6.1.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:09
+Build Time Elapsed:  00:00:13
 </pre>
 </body>
 </html>
