准备工作全部完成

--- a/MDK-ARM/STM32_Sensorless_BLDC/STM32_Sensorless_BLDC.build_log.htm
+++ b/MDK-ARM/STM32_Sensorless_BLDC/STM32_Sensorless_BLDC.build_log.htm
@@ -27,11 +27,27 @@ Project File Date:  12/18/2025
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 4 (build 422)', folder: 'D:\Keil MDK\ARM\ARMCC\Bin'
 Build target 'STM32_Sensorless_BLDC'
-compiling lcd_task.c...
+compiling main.c...
+../Bsp/inc/MPU9250-DMP.h(52): warning:  #1295-D: Deprecated declaration MPU9250_DMP - give arg types
+  int MPU9250_DMP();
+../Bsp/inc/MPU9250-DMP.h(148): warning:  #1295-D: Deprecated declaration MPU9250_dataReady - give arg types
+  
+ool MPU9250_dataReady();
+../Algorithm/util/stm32_mpu9250_clk.h(9): warning:  #1-D: last line of file ends without a newline
+  #endif // _STM32_MPU9250_CLK_H_
+../Algorithm/util/stm32_mpu9250_i2c.h(11): warning:  #1-D: last line of file ends without a newline
+  #endif // _STM32_MPU9250_I2C_H_
+../Core/Src/main.c(369): warning:  #177-D: variable "pitch"  was declared but never referenced
+        float pitch = pitch_inside;
+../Core/Src/main.c(370): warning:  #177-D: variable "roll"  was declared but never referenced
+        float roll = roll_inside;
+../Core/Src/main.c(371): warning:  #177-D: variable "yaw"  was declared but never referenced
+        float yaw = yaw_inside;
+../Core/Src/main.c: 7 warnings, 0 errors
 linking...
-Program Size: Code=183448 RO-data=22540 RW-data=904 ZI-data=108172  
+Program Size: Code=183376 RO-data=22452 RW-data=904 ZI-data=108172  
 FromELF: creating hex file...
-"STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf" - 0 Error(s), 0 Warning(s).
+"STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf" - 0 Error(s), 7 Warning(s).
 
 <h2>Software Packages used:</h2>
 
