--- a/MDK-ARM/STM32_Sensorless_BLDC/STM32_Sensorless_BLDC.build_log.htm
+++ b/MDK-ARM/STM32_Sensorless_BLDC/STM32_Sensorless_BLDC.build_log.htm
@@ -27,7 +27,14 @@ Project File Date:  01/28/2026
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 4 (build 422)', folder: 'D:\Keil MDK\ARM\ARMCC\Bin'
 Build target 'STM32_Sensorless_BLDC'
-"STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf" - 0 Error(s), 0 Warning(s).
+compiling foc_drv.c...
+../Core/Inc/main.h(190): warning:  #47-D: incompatible redefinition of macro "PI"  (declared at line 475 of "../Middlewares/ST/ARM/DSP/Inc/arm_math.h")
+  #define PI 3.1415926f
+..\Bsp\foc_drv.c: 1 warning, 0 errors
+linking...
+Program Size: Code=185340 RO-data=24596 RW-data=916 ZI-data=108868  
+FromELF: creating hex file...
+"STM32_Sensorless_BLDC\STM32_Sensorless_BLDC.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +57,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@6.1.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:05
 </pre>
 </body>
 </html>
